wrking on report

--- a/Rapport/biblio.bib
+++ b/Rapport/biblio.bib
@@ -66,4 +66,14 @@
   publisher={{\'E}ditions de l'Ecole polytechnique}
 }
 
+@book{santambrogio2015optimal,
+  title={Optimal Transport for Applied Mathematicians: Calculus of Variations, PDEs, and Modeling},
+  author={Santambrogio, F.},
+  isbn={9783319208282},
+  series={Progress in Nonlinear Differential Equations and Their Applications},
+  url={https://books.google.fr/books?id=UOHHCgAAQBAJ},
+  year={2015},
+  publisher={Springer International Publishing}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
